minio gateway 분리